<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".LawActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:background="@color/blue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tool_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/laws_related_to_woman"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="18sp"
                android:fontFamily="casual"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:padding="10sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/law_heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/LawHeading"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/link1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/link1"
                android:layout_margin="10dp"
                android:textStyle="italic"/>
            <TextView
                android:id="@+id/link2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/link2"
                android:layout_margin="10dp"
                android:textStyle="italic"/>
            <TextView
                android:id="@+id/link3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/link3"
                android:layout_margin="10dp"
                android:textStyle="italic"/>
            <TextView
                android:id="@+id/link4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/link4"
                android:layout_margin="10dp"
                android:textStyle="italic"/>
            <TextView
                android:id="@+id/link5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/link5"
                android:layout_margin="10dp"
                android:textStyle="italic"/>
            <TextView
                android:id="@+id/link6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/link6"
                android:layout_margin="10dp"
                android:textStyle="italic"/>
            <TextView
                android:id="@+id/link7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/link7"
                android:layout_margin="10dp"
                android:textStyle="italic"/>
            <TextView
                android:id="@+id/link8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/link8"
                android:layout_margin="10dp"
                android:textStyle="italic"/>
            <TextView
                android:id="@+id/link9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/link9"
                android:layout_margin="10dp"
                android:textStyle="italic"/>
            <TextView
                android:id="@+id/link10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/link10"
                android:layout_margin="10dp"
                android:textStyle="italic"/>
            <TextView
                android:id="@+id/link11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/link11"
                android:layout_margin="10dp"
                android:textStyle="italic"/>
        </LinearLayout>


    </ScrollView>

</LinearLayout>