<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:fitsSystemWindows="true"
    android:id="@+id/drawerlayout"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app"
            android:background="@color/blue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/tool_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/app_name"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:fontFamily="casual"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>
        <View
            android:layout_below="@+id/app"
            android:background="@drawable/view_design"
            android:layout_width="match_parent"
            android:layout_height="120sp"/>
            <LinearLayout
                android:layout_below="@+id/app"
                android:layout_above="@id/sos"
                android:padding="10sp"
                android:layout_marginTop="60sp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <GridLayout
                    android:id="@+id/main_grid"
                    android:layout_width="match_parent"
                    android:layout_height="0sp"
                    android:layout_weight="5"
                    android:rowCount="3"
                    android:columnCount="2"
                    android:alignmentMode="alignMargins"
                    android:columnOrderPreserved="false"
                    android:padding="10sp">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/card1"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_columnWeight="1"
                        android:layout_marginBottom="16dp"
                        android:layout_rowWeight="1"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        app:cardElevation="8dp"
                        app:cardCornerRadius="8dp">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal|center_vertical"
                            android:layout_margin="12dp"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="34dp"
                                android:layout_row="0"
                                android:layout_column="0"
                                android:layout_gravity="center_horizontal"
                                android:src="@drawable/escape" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/tips_to_escape_from_threat"
                                android:layout_gravity="center"
                                android:textColor="@android:color/black"
                                android:textSize="15sp"
                                android:textStyle="bold"/>

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/card2"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_columnWeight="1"
                        android:layout_marginBottom="16dp"
                        android:layout_rowWeight="1"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        app:cardElevation="8dp"
                        app:cardCornerRadius="8dp">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal|center_vertical"
                            android:layout_margin="12dp"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="40dp"
                                android:layout_row="0"
                                android:layout_column="0"
                                android:layout_gravity="center_horizontal"
                                android:src="@drawable/law" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/laws_related_to_woman"
                                android:layout_gravity="center"
                                android:textColor="@android:color/black"
                                android:textSize="15sp"
                                android:textStyle="bold"/>

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/card3"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_columnWeight="1"
                        android:layout_marginBottom="16dp"
                        android:layout_rowWeight="1"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        app:cardElevation="8dp"
                        app:cardCornerRadius="8dp">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal|center_vertical"
                            android:layout_margin="12dp"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="40dp"
                                android:layout_row="0"
                                android:layout_column="0"
                                android:layout_gravity="center_horizontal"
                                android:src="@drawable/defence" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/videos_for_self_defence"
                                android:layout_gravity="center"
                                android:textColor="@android:color/black"
                                android:textSize="15sp"
                                android:textStyle="bold"/>

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>
                    <androidx.cardview.widget.CardView
                        android:id="@+id/card4"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_columnWeight="1"
                        android:layout_marginBottom="16dp"
                        android:layout_rowWeight="1"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        app:cardElevation="8dp"
                        app:cardCornerRadius="8dp">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal|center_vertical"
                            android:layout_margin="12dp"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="40dp"
                                android:layout_row="0"
                                android:layout_column="0"
                                android:layout_gravity="center_horizontal"
                                android:src="@drawable/camera_24" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/send_area_picture"
                                android:layout_gravity="center"
                                android:textColor="@android:color/black"
                                android:textSize="15sp"
                                android:textStyle="bold"/>

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>


                </GridLayout>

            </LinearLayout>


        <ImageButton
            android:id="@+id/sos"
            android:clickable="true"
            android:layout_above="@+id/contacts"
            android:background="@drawable/sos"
            android:elevation="10sp"
            android:layout_margin="10sp"
            android:layout_centerHorizontal="true"
            android:layout_width="120sp"
            android:layout_height="120sp"/>

        <Button
            android:onClick="add_number"
            android:id="@+id/contacts"
            android:text="@string/add_number"
            android:background="@drawable/button_design"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:elevation="4sp"
            android:layout_alignParentBottom="true"
            android:layout_margin="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </RelativeLayout>
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        app:menu="@menu/menu_design"
        app:headerLayout="@layout/header"
        android:layout_gravity="start"
        android:layout_width="262sp"
        android:layout_height="match_parent"/>



</androidx.drawerlayout.widget.DrawerLayout>